[package]
name = "zk_stack_wizard"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
derive_more = "0.99.17"
directories = "5.0.1"
human-panic = "1.2.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "migrate", "postgres" ] }
url = "2.5.0"
web3 = { version = "0.19.0", features = ["signing"] }
xshell = "0.2.5"
